.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v4/classSelfMismatch_schema.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/classSelfMismatch_schema.ts(9,54): error TS377046: The `Self` type parameter for this class should be `InvalidSchemaClass`. effect(classSelfMismatch)
/.src/classSelfMismatch_schema.ts(19,59): error TS377046: The `Self` type parameter for this class should be `InvalidErrorSchemaClass`. effect(classSelfMismatch)
/.src/classSelfMismatch_schema.ts(24,18): error TS2339: Property 'RequestClass' does not exist on type 'typeof import("/node_modules/effect/dist/Schema")'.
/.src/classSelfMismatch_schema.ts(33,18): error TS2339: Property 'RequestClass' does not exist on type 'typeof import("/node_modules/effect/dist/Schema")'.


==== /.src/classSelfMismatch_schema.ts (4 errors) ====
    import * as Schema from "effect/Schema"
    
    // valid usage
    export class ValidSchemaClass extends Schema.Class<ValidSchemaClass>("ValidSchemaClass")({
      prop: Schema.String
    }) {}
    
    // invalid usage: Schema.Class<ValidSchemaClass> should be Schema.Class<InvalidSchemaClass> because the Self type parameter is not the same as the class name
    export class InvalidSchemaClass extends Schema.Class<ValidSchemaClass>("InvalidSchemaClass")({
                                                         ~~~~~~~~~~~~~~~~
!!! error TS377046: The `Self` type parameter for this class should be `InvalidSchemaClass`. effect(classSelfMismatch)
      prop: Schema.String
    }) {}
    
    // valid usage
    export class ValidErrorSchemaClass extends Schema.Class<ValidErrorSchemaClass>("ValidErrorSchemaClass")({
      prop: Schema.String
    }) {}
    
    // invalid usage: Schema.Class<ValidSchemaClass> should be Schema.Class<InvalidSchemaClass> because the Self type parameter is not the same as the class name
    export class InvalidErrorSchemaClass extends Schema.Class<ValidErrorSchemaClass>("InvalidErrorSchemaClass")({
                                                              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS377046: The `Self` type parameter for this class should be `InvalidErrorSchemaClass`. effect(classSelfMismatch)
      prop: Schema.String
    }) {}
    
    export class ValidSchemaTaggedRequest
      extends Schema.RequestClass<ValidSchemaTaggedRequest>("ValidSchemaTaggedRequest")({
                     ~~~~~~~~~~~~
!!! error TS2339: Property 'RequestClass' does not exist on type 'typeof import("/node_modules/effect/dist/Schema")'.
        payload: Schema.Struct({}),
        success: Schema.Void,
        error: Schema.Never
      })
    {}
    
    // invalid usage: Schema.TaggedRequest<ValidSchemaTaggedRequest> should be Schema.TaggedRequest<InvalidSchemaTaggedRequest> because the Self type parameter is not the same as the class name
    export class InvalidSchemaTaggedRequest
      extends Schema.RequestClass<ValidSchemaTaggedRequest>("InvalidSchemaTaggedRequest")({
                     ~~~~~~~~~~~~
!!! error TS2339: Property 'RequestClass' does not exist on type 'typeof import("/node_modules/effect/dist/Schema")'.
        payload: Schema.Struct({}),
        success: Schema.Void,
        error: Schema.Never
      })
    {}
    
